--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>PHGHuy</title>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ThanhDieu-Template</title>
 <link href="./Css-Javascript/css2" rel="stylesheet">
 <link rel="shortcut icon" href="https://kenh14cdn.com/thumb_w/660/203336854389633024/2022/5/23/photo-1-1653312456997323551040.jpg" type="image/png">
 <link rel="preconnect" href="https://fonts.gstatic.com/">
@@ -11,13 +9,14 @@
 <div class="min-h-full flex-h-center page-bg" id="background_div">
 <div class="background-overlay"></div>
 <div class="mt-36 page-full-wrap relative">
-<img class="display-image m-auto" src="./Css-Javascript/ThanhDieu-Template.png">
-</head>
+<img class="display-image m-auto" src="./Css-Javascript/ThanhDieu-Template.png" >
 <body>
+
+
 <h2 class="page-title page-text-color page-text-font mt-16 text-center">Phan Hoàng Gia Huy</h2>
 <div class="page-bioline text-fs-16 page-text-color page-text-font mt-8 ln-h-22 text-center">Mới tập làm coder</div>
 <div class="flex-both-center flex-wrap mt-16">
-<audio id="myAudio">
+	<audio id="myAudio">
   <source src="music.ogg" type="audio/ogg">
   <source src="music.mp3" type="audio/mpeg">
 </audio>
@@ -43,8 +42,7 @@
 </div>
 <div class="page-item-wrap relative">
 <div class="page-item flex-both-center relative"></div>
-<!-- Thêm sự kiện onclick và gọi hàm openImage() -->
-<a rel="noopener nofollow" class="page-item-each flex-both-center" href="javascript:void(0)" onclick="openImage()">Vietcombank</a>
+<a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://cdn.discordapp.com/attachments/902768205762822274/1236012537900957816/IMG_6479.jpg?ex=663675e1&is=66352461&hm=2f726a21c02546c3dc6df60f7d82b487664312c49d83c21f2262eb34c2f5b162&" target="_blank">Vietcombank</a>
 </div>
 <div class="text-center">
 <br>
@@ -63,3 +61,6 @@ function playAudio() {
 function pauseAudio() { 
   x.pause(); 
 } 
+</script>
+<script type="text/javascript" src="./Css-Javascript/p.js"></script>
+</body><div class="troywell-avia"></div><div class="troywell-caa"></div></html>
