--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>ThanhDieu-Template</title>
+<title>PHGHuy</title>
 <link href="./Css-Javascript/css2" rel="stylesheet">
 <link rel="shortcut icon" href="https://kenh14cdn.com/thumb_w/660/203336854389633024/2022/5/23/photo-1-1653312456997323551040.jpg" type="image/png">
 <link rel="preconnect" href="https://fonts.gstatic.com/">
@@ -30,11 +30,15 @@
 </div>
 <div class="page-item-wrap relative">
 <div class="page-item flex-both-center relative"></div>
-<a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://github.com/PHGHuy2007" target="_blank">Github</a>
+<a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://www.instagram.com/phanhoanggiahuy_2007/" target="_blank">Instagram</a>
 </div>
 <div class="page-item-wrap relative">
 <div class="page-item flex-both-center relative"></div>
 <a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://discord.gg/6tZG8kEbSa" target="_blank">Discord</a>
+</div>
+<div class="page-item-wrap relative">
+<div class="page-item flex-both-center relative"></div>
+<a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://github.com/PHGHuy2007" target="_blank">Github</a>
 </div>
 <div class="page-item-wrap relative">
 <div class="page-item flex-both-center relative"></div>
