--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <h2 class="page-title page-text-color page-text-font mt-16 text-center">Phan Hoàng Gia Huy</h2>
 <div class="page-bioline text-fs-16 page-text-color page-text-font mt-8 ln-h-22 text-center">Mới tập làm coder</div>
+<div class="page-bioline text-fs-16 page-text-color page-text-font mt-5 ln-h-22 text-center">Hồng Lĩnh Hà Tĩnh</div>
 <div class="flex-both-center flex-wrap mt-16">
 	<audio id="myAudio">
   <source src="music.ogg" type="audio/ogg">
