--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </audio>
 <button class="glow-on-hover" onclick="playAudio()" type="button">Play Music </button>&nbsp;&nbsp;
 <button class="glow-on-hover" onclick="pauseAudio()" type="button">Stop Music</button> 
-<button class="glow-on-hover" onclick="window.location.href='https://phghuy2007.github.io/ProfilePro/'" type="button">ProfilePro</button>
+<button class="glow-on-hover" onclick="window.location.href='https://phghuy2007.github.io/ProfilePro/'" type="button">ProfileProPC</button>
 </div>
 <div class="mt-32">
 <div class="page-item-wrap relative">
