--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </div>
 <div class="page-item-wrap relative">
 <div class="page-item flex-both-center relative"></div>
-<a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://cdn.discordapp.com/attachments/902768205762822274/1236012537900957816/IMG_6479.jpg?ex=663675e1&is=66352461&hm=2f726a21c02546c3dc6df60f7d82b487664312c49d83c21f2262eb34c2f5b162&" target="_blank">Vietcombank</a>
+<a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://media.discordapp.net/attachments/902768205762822274/1236012537900957816/IMG_6479.jpg?ex=663f07a1&is=663db621&hm=b83b218232b19ce75c4b1ecc01ba7e332797724a76b77f60940ad352d563e19b&=&format=webp&width=444&height=675" target="_blank">Vietcombank</a>
 </div>
 <div class="text-center">
 <br>
