--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="mt-36 page-full-wrap relative">
 <img class="display-image m-auto" src="./Css-Javascript/ThanhDieu-Template.png" >
 <body>
-  <title>FPS Display</title>
+  
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
     countFrame();
 </script>
 </body>
-<h2 class="page-title page-text-color page-text-font mt-16 text-center">Phan Hoàng Gia Huy</h2>
+<h2 class="page-title page-text-color page-text-font mt-16 text-center">Phan Hoàng Gia Huy<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Twitter_Verified_Badge.svg/512px-Twitter_Verified_Badge.svg.png" width="18" height="18" alt="Tích Xanh"></h2>
 <div class="page-bioline text-fs-16 page-text-color page-text-font mt-8 ln-h-22 text-center">Mới tập làm coder</div>
 <div class="page-bioline text-fs-16 page-text-color page-text-font mt-5 ln-h-22 text-center">Hồng Lĩnh Hà Tĩnh</div>
 <div class="flex-both-center flex-wrap mt-16">
