--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
 <a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://locket.camera/links/N43m4374hwDCsKKGA" target="_blank">Locket</a>
 </div>
 <div class="page-item-wrap relative">
+  <div class="page-item flex-both-center relative"></div>
+  <a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://www.tiktok.com/@phghuy2k7" target="_blank">TikTok</a>
+  </div>
+  <div class="page-item-wrap relative">
+    <div class="page-item flex-both-center relative"></div>
+    <a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://www.nimo.tv/live/80237645" target="_blank">NimoTV</a>
+    </div>
+<div class="page-item-wrap relative">
 <div class="page-item flex-both-center relative"></div>
 <a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://media.discordapp.net/attachments/902768205762822274/1236012537900957816/IMG_6479.jpg?ex=663f07a1&is=663db621&hm=b83b218232b19ce75c4b1ecc01ba7e332797724a76b77f60940ad352d563e19b&=&format=webp&width=444&height=675" target="_blank">Vietcombank</a>
 </div>
