--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 <a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://www.instagram.com/phanhoanggiahuy_2007/" target="_blank">Instagram</a>
 </div>
 <div class="page-item-wrap relative">
+  <div class="page-item flex-both-center relative"></div>
+  <a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://chat.zalo.me/?phone=0974705778" target="_blank">Zalo</a>
+  </div>
+<div class="page-item-wrap relative">
 <div class="page-item flex-both-center relative"></div>
 <a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://discord.gg/6tZG8kEbSa" target="_blank">Discord</a>
 </div>
